src/objects/Super_Flow_Question_2__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAP</fullName>
                </value>
                <value>
                    <fullName>LAP</fullName>
                </value>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>501c3</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>B&amp;R</fullName>
                </value>
                <value>
                    <fullName>COGS</fullName>
                </value>
                <value>
                    <fullName>Cert Copy</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Conv</fullName>
                </value>
                <value>
                    <fullName>Diss</fullName>
                </value>
                <value>
                    <fullName>MMM</fullName>
                </value>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>ENC</fullName>
                </value>
                <value>
                    <fullName>ENR</fullName>
                </value>
                <value>
                    <fullName>FQ</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>S-Corp Elec</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>STID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>RA Renewal</fullName>
                </value>
                <value>
                    <fullName>Inbound PS</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Biz Starter</fullName>
                </value>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>$uperFlow Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Question__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Featured__c</columns>
        <columns>Product__c</columns>
        <columns>Team__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Icebreakers</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Featured__c</columns>
        <columns>Question__c</columns>
        <columns>Product__c</columns>
        <columns>Team__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Featured__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Icebreakers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Question-{0000}</displayFormat>
        <label>$uperFlow Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>$uperFlow Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Edit_To_Question</fullName>
        <active>true</active>
        <description>Superflow managers cannot change the question once it is created.</description>
        <errorConditionFormula>NOT( ISNEW() )  &amp;&amp;  ISCHANGED( Question__c )  &amp;&amp;   $Profile.Name != &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>Cannot change question once created.  To edit, please set the record to inactive and then clone it.</errorMessage>
    </validationRules>
</CustomObject>